--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -261,6 +261,7 @@ In between steps, the debugger takes snapshots of the current stack frame to rec
 \end{figure}
 %vRozen: todo fixme remove 'placeholder'
 %vRozen: perhaps a tikz image here
+%vRozen: inconsistent size of the text
 
 A live environment must be able to react to two different events: a change in the code or a change in the test/input data. 
 %vRozen: 'live environment' -- 'live programming environment'
